修复头像图片路径大小写问题

--- a/index.html
+++ b/index.html
@@ -906,7 +906,7 @@
                 <div class="avatar-container">
                     <div class="avatar">
                         <!-- 使用本地图片文件 -->
-                        <img src="photo.png" alt="Alexander" class="avatar-image" />
+                        <img src="Photo.png" alt="Alexander" class="avatar-image" />
                         
                         <!-- 备用图标（如果图片加载失败） -->
                         <i class="fas fa-user-tie avatar-icon avatar-fallback"></i>
